Add aria-labelledby to password-reset component input

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -2,7 +2,8 @@
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}" [formControl]="usernameFormControl"
+           matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}"
+           [formControl]="usernameFormControl" aria-labelledby="password-reset-description"
            [errorStateMatcher]="matcher" name="email"/>
     <mat-error *ngIf="usernameFormControl.hasError('required')">
       {{ 'password-reset.email-required' | translate }}
@@ -18,3 +19,7 @@
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
   [confirmButtonClickAction]="buildPasswordResetActionCallback(email)"
 ></app-dialog-action-buttons>
+
+<div class="visually-hidden">
+  <div id="password-reset-description">{{ 'password-reset.email-description' | translate }}</div>
+</div>
