Add aria-labelledby to register component input

--- a/src/app/components/home/_dialogs/register/register.component.html
+++ b/src/app/components/home/_dialogs/register/register.component.html
@@ -49,3 +49,9 @@
   ></app-dialog-action-buttons>
 </form>
 
+<div class="visually-hidden">
+  <div id="email-description">{{ 'register.email-description' | translate }}</div>
+  <div id="email-description-repeat">{{ 'register.email-description-repeat' | translate }}</div>
+  <div id="password-description">{{ 'register.password-description' | translate }}</div>
+  <div id="password-description-repeat">{{ 'register.password-description-repeat' | translate }}</div>
+</div>
