--- a/src/app/components/home/_dialogs/register/register.component.html
+++ b/src/app/components/home/_dialogs/register/register.component.html
@@ -3,7 +3,7 @@
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="email" #userName placeholder="{{ 'register.email' | translate }}" [formControl]="usernameFormControl"
-           [errorStateMatcher]="matcher" aria-labelledby="email-description"/>
+           [errorStateMatcher]="matcher" aria-labelledby="register-email-description"/>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
       {{ 'register.email-invalid' | translate }}
     </mat-error>
@@ -15,7 +15,7 @@
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="email" #userName2 placeholder="{{ 'register.email-verify' | translate }}" [formControl]="username2FormControl"
-           [errorStateMatcher]="matcher" aria-labelledby="email-description-repeat"/>
+           [errorStateMatcher]="matcher" aria-labelledby="register-email-description-repeat"/>
     <mat-error *ngIf="username2FormControl.hasError('emailIsEqual') && !username2FormControl.hasError('required')">
       {{ 'register.email-unmatch' | translate }}
     </mat-error>
@@ -25,7 +25,7 @@
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="password" #userPassword1 placeholder="{{ 'register.password' | translate }}"
            [formControl]="password1FormControl" [errorStateMatcher]="matcher"
-           aria-labelledby="password-description"/>
+           aria-labelledby="register-password-description">
     <mat-error *ngIf="password1FormControl.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
@@ -35,7 +35,7 @@
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="password" #userPassword2 placeholder="{{ 'register.password-verify' | translate}}"
            [formControl]="password2FormControl" [errorStateMatcher]="matcher"
-           aria-labelledby="password-description-repeat"/>
+           aria-labelledby="register-password-description-repeat">
     <mat-error *ngIf="password2FormControl.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
@@ -52,8 +52,8 @@
 </form>
 
 <div class="visually-hidden">
-  <div id="email-description">{{ 'register.email-description' | translate }}</div>
-  <div id="email-description-repeat">{{ 'register.email-description-repeat' | translate }}</div>
-  <div id="password-description">{{ 'register.password-description' | translate }}</div>
-  <div id="password-description-repeat">{{ 'register.password-description-repeat' | translate }}</div>
+  <div id="register-email-description">{{ 'register.email-description' | translate }}</div>
+  <div id="register-email-description-repeat">{{ 'register.email-description-repeat' | translate }}</div>
+  <div id="register-password-description">{{ 'register.password-description' | translate }}</div>
+  <div id="register-password-description-repeat">{{ 'register.password-description-repeat' | translate }}</div>
 </div>
