Implement 'set_new_password' function

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -9,9 +9,6 @@
            matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}"
            [formControl]="usernameFormControl" aria-labelledby="password-reset-description"
            [errorStateMatcher]="matcher" name="email"/>
-    <mat-error *ngIf="usernameFormControl.hasError('required')">
-      {{ 'password-reset.email-required' | translate }}
-    </mat-error>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
@@ -30,21 +27,49 @@
 <form (ngSubmit)="resetPassword(email.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
-    <input matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}" [formControl]="usernameFormControl"
+    <input matInput type="email" #email2 placeholder="{{ 'password-reset.email' | translate }}" [formControl]="usernameFormControl"
            [errorStateMatcher]="matcher" name="email"/>
-    <mat-error *ngIf="usernameFormControl.hasError('required')">
-      {{ 'password-reset.email-required' | translate }}
-    </mat-error>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
-  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="button">
+  <mat-form-field class="input-block">
+    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
+           matInput type="password" #password1 placeholder="{{ 'register.password' | translate }}"
+           [formControl]="password1FormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="password1FormControl.hasError('required')">
+      {{ 'register.password-required' | translate }}
+    </mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="input-block">
+    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
+           matInput type="password" #password2 placeholder="{{ 'register.password-verify' | translate}}"
+           [formControl]="password2FormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="password2FormControl.hasError('required')">
+      {{ 'register.password-required' | translate }}
+    </mat-error>
+    <mat-error *ngIf="password2FormControl.hasError('passwordIsEqual') && !password2FormControl.hasError('required')">
+      {{ 'register.password-unmatch' | translate }}
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field class="input-block">
+    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
+           matInput type="password" #key placeholder="{{ 'register.password-verify' | translate}}"
+           [formControl]="password2FormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="password2FormControl.hasError('required')">
+      {{ 'register.password-required' | translate }}
+    </mat-error>
+    <mat-error *ngIf="password2FormControl.hasError('passwordIsEqual') && !password2FormControl.hasError('required')">
+      {{ 'register.password-unmatch' | translate }}
+    </mat-error>
+  </mat-form-field>
+  <button (click)="setNewPassword(email2.value, key.value, password1.value)" mat-flat-button type="button">
     {{ 'password-reset.set-new-password-button' | translate }}
   </button>
 </form>
 
-<app-dialog-action-buttons 
+<app-dialog-action-buttons
   buttonsLabelSection="password-reset"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
 ></app-dialog-action-buttons>
