Fix Padding Issues Color-Palette, Themes-Class additions, new Meta-Const for Themes, (Description and Name), (To-Do: Ordering of Themes in Pallete, Default Theme in LocalStorage Tests?)

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -48,8 +48,11 @@
       <mat-grid-list cols="2">
         <mat-grid-tile *ngFor="let theme of themes">
           <button mat-menu-item class="color-button" (click)="changeTheme(theme)">
-            <mat-icon class="color-icon" [ngStyle]="{'color':theme.previewColor}"  matTooltip="{{theme.name}}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === theme.name" class="check">check_circle</mat-icon>
+            <mat-icon
+              class="color-icon"
+              [ngStyle]="{'color':theme.previewColor}"
+              matTooltip="{{theme.toString()}}">lens</mat-icon>
+            <mat-icon *ngIf="themeClass === theme.key" class="check">check_circle</mat-icon>
           </button>
         </mat-grid-tile>
       </mat-grid-list>
