--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -49,7 +49,7 @@ mat-icon {
 
 .color-icon {
   position:relative;
-  left: -5px;
+  left: -10px;
   font-size: 45px;
   height: 45px;
   width: 45px;
@@ -66,7 +66,8 @@ mat-icon {
   width: 25px;
   line-height: 100%!important;
   position: absolute;
-  top: 16px;
-  right: -6.5px;
+  top:calc( 50% + 1px );
+  left:calc( 50% + 1px );
+  transform:translate(-50%,-50%);
   color: white;
 }
