added aria-hidden attribute to rescale menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <app-footer></app-footer>
     </footer>
   </div>
-  <div class="rescale_overlay" id="overlay_rescale">
+  <div class="rescale_overlay" id="overlay_rescale" aria-hidden="true;">
     <button mat-icon-button (click)="getRescale().deactivateScale()">
       <mat-icon>fullscreen_exit</mat-icon>
     </button>
