--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -48,10 +48,10 @@
 
       <div id="themeMenu">
         <div class="scrollWrp">
-          <button *ngFor="let theme of themes" (click)="changeTheme(theme)">
+          <button *ngFor="let theme of themes" (click)="changeTheme(theme)" matRipple [matRippleColor]="'rgba(0,0,0,0.1)'">
             <div class="btnContent">
               <div class="btnColorIcon" [ngStyle]="{'background-color':theme.previewColor}">
-                <div class="checked" *ngIf="theme.key===themeClass">
+                <div class="checked" [ngClass]="{'checked_true':theme.key===themeClass,'checked_false':theme.key!==themeClass}">
                   <mat-icon>
                     checked
                   </mat-icon>
