--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -24,20 +24,20 @@
   <p>{{ 'password-reset.set-new-password' | translate }}</p>
 </div>
 
-<form (ngSubmit)="resetPassword(email.value)" fxLayout="column" fxLayoutAlign="space-around"
+<form (ngSubmit)="setNewPassword(email2.value, key.value, password1.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
-    <input matInput type="email" #email2 placeholder="{{ 'password-reset.email' | translate }}" [formControl]="usernameFormControl"
-           [errorStateMatcher]="matcher" name="email"/>
-    <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
+    <input matInput type="email" #email2 placeholder="{{ 'password-reset.email' | translate }}"
+           [formControl]="usernameFormControl2" [errorStateMatcher]="matcher" name="email"/>
+    <mat-error *ngIf="usernameFormControl2.hasError('email') && !usernameFormControl2.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="password" #password1 placeholder="{{ 'register.password' | translate }}"
-           [formControl]="password1FormControl" [errorStateMatcher]="matcher">
-    <mat-error *ngIf="password1FormControl.hasError('required')">
+           [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="passwordFormControl.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
   </mat-form-field>
@@ -45,26 +45,23 @@
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
            matInput type="password" #password2 placeholder="{{ 'register.password-verify' | translate}}"
-           [formControl]="password2FormControl" [errorStateMatcher]="matcher">
-    <mat-error *ngIf="password2FormControl.hasError('required')">
+           [formControl]="passwordFormControl2" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="passwordFormControl2.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
-    <mat-error *ngIf="password2FormControl.hasError('passwordIsEqual') && !password2FormControl.hasError('required')">
+    <mat-error *ngIf="passwordFormControl2.hasError('passwordIsEqual') && !passwordFormControl2.hasError('required')">
       {{ 'register.password-unmatch' | translate }}
     </mat-error>
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="password" #key placeholder="{{ 'register.password-verify' | translate}}"
-           [formControl]="password2FormControl" [errorStateMatcher]="matcher">
-    <mat-error *ngIf="password2FormControl.hasError('required')">
-      {{ 'register.password-required' | translate }}
-    </mat-error>
-    <mat-error *ngIf="password2FormControl.hasError('passwordIsEqual') && !password2FormControl.hasError('required')">
-      {{ 'register.password-unmatch' | translate }}
+           matInput type="text" #key placeholder="{{ 'password-reset.key' | translate}}"
+           [formControl]="keyFormControl" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="keyFormControl.hasError('required')">
+      {{ 'password-reset.key-required' | translate }}
     </mat-error>
   </mat-form-field>
-  <button (click)="setNewPassword(email2.value, key.value, password1.value)" mat-flat-button type="button">
+  <button mat-flat-button type="submit">
     {{ 'password-reset.set-new-password-button' | translate }}
   </button>
 </form>
