--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.html
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.html
@@ -1,16 +1,16 @@
-<div>
+<mat-dialog-content>
   <div id="setFocus" class="intro-text" tabindex="0">
     <app-demo-en *ngIf="currentLang=='en'"></app-demo-en>
     <app-demo-de *ngIf="currentLang=='de'"></app-demo-de>
   </div>
-  <div class="video" fxLayout="row" fxLayoutAlign="center" tabindex="0">
+  <div class="video">
     <iframe tabindex="0"
             [ngClass]="{'mobileFrame': deviceType === 'mobile', 'desktopFrame': deviceType === 'desktop'}"
             src="https://www.youtube.com/embed/RODwmMxLKa0?autoplay=0" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <app-dialog-action-buttons
-    buttonsLabelSection="introduction"
-    [cancelButtonClickAction]="buildCloseDialogActionCallback()"
-  ></app-dialog-action-buttons>
-</div>
+</mat-dialog-content>
+<app-dialog-action-buttons
+  buttonsLabelSection="introduction"
+  [cancelButtonClickAction]="buildCloseDialogActionCallback()"
+></app-dialog-action-buttons>
