--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.html
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.html
@@ -1,3 +1,5 @@
+<h1 tabindex="0" class="modal" mat-dialog-title>{{ 'introduction.title' | translate }}</h1>
+<mat-divider></mat-divider>
 <mat-dialog-content>
   <div id="setFocus" class="intro-text" tabindex="0">
     <app-demo-en *ngIf="currentLang=='en'"></app-demo-en>
@@ -7,7 +9,8 @@
     <iframe tabindex="0"
             [ngClass]="{'mobileFrame': deviceType === 'mobile', 'desktopFrame': deviceType === 'desktop'}"
             src="https://www.youtube.com/embed/RODwmMxLKa0?autoplay=0" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    ></iframe>
   </div>
 </mat-dialog-content>
 <app-dialog-action-buttons
