--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
@@ -1,3 +1,8 @@
+h1 {
+  color: var(--on-surface);
+  font-size: 2em;
+}
+
 .intro-text {
   font-size: medium;
   font-family: Roboto, "Helvetica Neue", sans-serif;
