Make register a-tag keyboard only usable and edit login input text

--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -45,7 +45,8 @@
 <mat-divider></mat-divider>
 <div fxLayout="row" class="register">
   <p>{{ 'login-page.not-registered' | translate }}</p>
-  <a class="registerBtn" (click)="openRegisterDialog()">{{ 'login-page.register' | translate }}</a>
+  <a href="" class="registerBtn" (click)="openRegisterDialog(); $event.preventDefault(); $event.stopPropagation();">
+    {{ 'login-page.register' | translate }}</a>
 </div>
 <app-dialog-action-buttons
   [spacing]="false"
