Add level 2 header tag to introduction dialog text

--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
@@ -3,6 +3,10 @@ h1 {
   font-size: 2em;
 }
 
+h2 {
+  font-size: large;
+}
+
 .intro-text {
   font-size: medium;
   font-family: Roboto, "Helvetica Neue", sans-serif;
