--- a/src/app/components/home/_dialogs/overlay/overlay.component.scss
+++ b/src/app/components/home/_dialogs/overlay/overlay.component.scss
@@ -3,6 +3,7 @@
   color: var(--on-primary);
 }
 
-.mat-dialog-content {
+div {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   color: var(--on-surface);
 }
