Add color change to a focused button in the footer bar.

--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -215,3 +215,8 @@ mat-icon {
   color:rgba(0,0,0,0.9);
   font-weight:500;
 }
+
+button:focus {
+  background: var(--on-surface);
+  color: var(--background);
+}
