--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -216,7 +216,11 @@ mat-icon {
   font-weight:500;
 }
 
-button:focus {
+.focus_button:focus {
   background: var(--on-surface);
   color: var(--background);
+}
+
+.focus_item:focus {
+  border: 1px solid var(--on-surface);
 }
