Refactor placeholder for inputs in password-reset component

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -6,9 +6,10 @@
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}"
+           matInput type="email" #email
            [formControl]="usernameFormControl" aria-labelledby="password-reset-description"
            [errorStateMatcher]="matcher" name="email"/>
+    <mat-placeholder class="placeholder">{{ 'password-reset.email' | translate }}</mat-placeholder>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
@@ -27,16 +28,18 @@
 <form (ngSubmit)="setNewPassword(email2.value, key.value, password1.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
-    <input matInput type="email" #email2 placeholder="{{ 'password-reset.email' | translate }}"
-           [formControl]="usernameFormControl2" [errorStateMatcher]="matcher" name="email"/>
+    <input matInput type="email" #email2 [formControl]="usernameFormControl2"
+           [errorStateMatcher]="matcher" name="email"/>
+    <mat-placeholder class="placeholder">{{ 'password-reset.email' | translate }}</mat-placeholder>
     <mat-error *ngIf="usernameFormControl2.hasError('email') && !usernameFormControl2.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="password" #password1 placeholder="{{ 'register.password' | translate }}"
-           [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+           matInput type="password" #password1 [formControl]="passwordFormControl"
+           [errorStateMatcher]="matcher"/>
+    <mat-placeholder class="placeholder">{{ 'register.password' | translate }}</mat-placeholder>
     <mat-error *ngIf="passwordFormControl.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
@@ -44,8 +47,9 @@
 
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="password" #password2 placeholder="{{ 'register.password-verify' | translate}}"
-           [formControl]="passwordFormControl2" [errorStateMatcher]="matcher">
+           matInput type="password" #password2 [formControl]="passwordFormControl2"
+           [errorStateMatcher]="matcher"/>
+    <mat-placeholder class="placeholder">{{ 'register.password-verify' | translate }}</mat-placeholder>
     <mat-error *ngIf="passwordFormControl2.hasError('required')">
       {{ 'register.password-required' | translate }}
     </mat-error>
@@ -55,8 +59,8 @@
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="text" #key placeholder="{{ 'password-reset.key' | translate}}"
-           [formControl]="keyFormControl" [errorStateMatcher]="matcher">
+           matInput type="text" #key [formControl]="keyFormControl" [errorStateMatcher]="matcher"/>
+    <mat-placeholder class="placeholder">{{ 'password-reset.key' | translate }}</mat-placeholder>
     <mat-error *ngIf="keyFormControl.hasError('required')">
       {{ 'password-reset.key-required' | translate }}
     </mat-error>
