--- a/src/app/components/creator/_dialogs/comment-settings/comment-settings.component.html
+++ b/src/app/components/creator/_dialogs/comment-settings/comment-settings.component.html
@@ -24,7 +24,7 @@
   </div>
   <div fxLayoutAlign="center center">
     <button mat-raised-button class="export" (click)="openExportDialog()" aria-labelledby="export-comments">
-      <mat-icon>cloud_download</mat-icon>
+      <mat-icon>save</mat-icon>
       {{ 'room-page.export-comments' | translate }}</button>
   </div>
   <div fxLayoutAlign="center center">
