--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -47,7 +47,7 @@
     <button [disabled]="cookiesDisabled()"  mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu"
             aria-labelledby="session-label" id="session-button">
       <div class="label-icon">
-        <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
+        <mat-icon *ngIf="!user.isGuest" class="header-icons">account_circle</mat-icon>
         <mat-icon *ngIf="user.isGuest" svgIcon="meeting_room" class="header-icons"></mat-icon>
         <h2 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h2>
         <h2 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h2>
@@ -56,19 +56,19 @@
 
     <button [disabled]="cookiesDisabled()"  mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu"
             aria-labelledby="session-label">
-      <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
+      <mat-icon *ngIf="!user.isGuest" class="header-icons">account_circle</mat-icon>
       <mat-icon *ngIf="user.isGuest" svgIcon="meeting_room" class="header-icons"></mat-icon>
     </button>
 
     <button id="login-button" [disabled]="cookiesDisabled()" mat-button *ngIf="!user && deviceType === 'desktop'" (click)=login(false) aria-labelledby="login-label">
       <div class="label-icon">
-        <mat-icon class="header-icons">account_box</mat-icon>
+        <mat-icon class="header-icons">account_circle</mat-icon>
         <h2 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h2>
       </div>
     </button>
 
     <button [disabled]="cookiesDisabled()"  mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false) aria-labelledby="login-label">
-      <mat-icon class="header-icons">account_box</mat-icon>
+      <mat-icon class="header-icons">account_circle</mat-icon>
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
