--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="rescale_overlay" id="overlay_rescale" aria-hidden="true;">
     <button mat-icon-button (click)="getRescale().deactivateScale()">
-      <mat-icon>fullscreen_exit</mat-icon>
+      <mat-icon>arrow_back</mat-icon>
     </button>
     <button mat-icon-button (click)="getRescale().scaleUp()">
       <mat-icon>zoom_in</mat-icon>
