--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -5,7 +5,7 @@
       <mat-icon class="header-icons">arrow_back</mat-icon>
     </button>
     <button mat-icon-button aria-hidden="true">
-      <mat-icon class="header-icons" (click)="getRescale().activeScale();">fullscreen</mat-icon>
+      <mat-icon class="header-icons" (click)="getRescale().activeScale();">format_size</mat-icon>
 
     </button>
     <span class="fill-remaining-space"></span>
